<resources>
    <string name="app_name">Green Footprint</string>

    <!-- Email / Senha -->
    <string name="email">Email</string>
    <string name="emailCadastro">Seu Email</string>
    <string name="senha">Senha</string>
    <string name="senhaCadastro">Sua Senha</string>
    <string name="senhaconfirm">Confirmar Senha</string>

    <!-- Voltar / SignUp / Login / Forgot -->
    <string name="signUp">Cadastrar</string>
    <string name="Login">Login</string>
    <string name="enviar">Enviar</string>
    <string name="forgot">Click here if you forgot your password</string>
    <string name="gotoLogin">Click here if you already has an account</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="forgot_password_hint">Enter your email below to receive an email to change password</string>
    <string name="receive_password_email_button">Change password</string>
    <string name="onboarding_start">Click here to start</string>


    <!-- Menu Interno -->
    <string name="novo_cadastro">Novo Status</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Maps | chatbot -->
    <string name="Pontos_plantio">Começe a plantar Hoje</string>
    <string name="localizacao_maps">Maps</string>
    <string name="chatBot">ChatBot</string>

    <!-- alguns buttons -->
    <string name="duvida">Dúvidas</string>
    <string name="addPlanta">Adicionar Planta</string>
    <string name="topPlantas">Top plantas</string>
</resources>