<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.login.LoginFragment">


<ImageView
android:id="@+id/im_page"
android:layout_width="0dp"
android:layout_height="0dp"
android:scaleType="fitXY"
android:src="@drawable/fundo_cadastro"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="1.0"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent"
app:layout_constraintVertical_bias="1.0" />

<ImageView
android:id="@+id/iw_logoLogin"
android:layout_width="0dp"
android:layout_height="97dp"
android:layout_gravity="center"
android:src="@drawable/logo_app"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="1.0"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent"
app:layout_constraintVertical_bias="0.067" />

<EditText
android:id="@+id/tw_Email"
android:layout_width="278dp"
android:layout_height="41dp"
android:layout_marginTop="186dp"
android:layout_marginBottom="364dp"
android:ems="10"
android:hint="@string/email"
android:inputType="textEmailAddress"
android:textAlignment="center"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.496"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/iw_logoLogin" />

<EditText
android:id="@+id/tw_Senha"
android:layout_width="279dp"
android:layout_height="50dp"
android:layout_marginTop="68dp"
android:ems="10"
android:hint="@string/senha"
android:inputType="textPassword"
android:textAlignment="center"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintHorizontal_bias="0.492"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/tw_Email"
app:layout_constraintVertical_bias="0.0" />

<TextView
android:id="@+id/tw_forgot"
android:layout_width="167dp"
android:layout_height="28dp"
android:layout_marginBottom="80dp"
android:text="@string/forgot"
android:textAlignment="center"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent" />

<Button
android:id="@+id/bt_Login"
android:layout_width="223dp"
android:layout_height="44dp"
android:layout_marginTop="44dp"
android:text="@string/Login"
app:layout_constraintBottom_toBottomOf="@+id/im_page"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/tw_Senha"
app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
