<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.inicio.firstScreenFragment"
        android:background="@drawable/fundo_menu">


        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="378dp"
            android:layout_height="515dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.445"
            tools:context=".MapsActivity" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="357dp"
            android:layout_height="47dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_extra_bold"
            android:text="@string/Pontos_plantio"
            android:textAlignment="center"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@+id/map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="120dp"
            android:layout_height="58dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="41dp"
            android:text="@string/duvida"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button2"
            android:layout_width="110dp"
            android:layout_height="59dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/topPlantas"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/map"
            app:layout_constraintVertical_bias="0.588" />

        <Button
            android:id="@+id/button3"
            android:layout_width="120dp"
            android:layout_height="56dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:text="@string/addPlanta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map"
            app:layout_constraintVertical_bias="0.025" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>