<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="fragmentoMenu"
            type="com.iesb.greenfootprint.ui.fragment.screen.MenuFragment" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.screen.MenuFragment"
    android:background="@drawable/fundo_cadastro">


    <ImageView
        android:id="@+id/vw_logoMain"
        android:layout_width="0dp"
        android:layout_height="157dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_app" />

    <Button
        android:id="@+id/bt_loginMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/custom_button1"
        android:text="@string/Login"
        android:textAllCaps="true"
        android:textColor="#BABABA"
        app:layout_constraintBottom_toTopOf="@+id/bt_cadastroMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_logoMain" />

    <Button
        android:id="@+id/bt_cadastroMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/custom_button1"
        android:text="@string/signUp"
        android:textColor="#BABABA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_loginMain" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="219dp"
        android:layout_height="87dp"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button.BaseTxt"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_loginMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vw_logoMain"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>