<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="voltar"
            type="com.iesb.greenfootprint.ui.fragment.signUp.SignUpFragment" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.SignUpFragment"
        android:background="@drawable/fundo_cadastro">

        <Button
            android:id="@+id/bt_singUp"
            android:layout_width="205dp"
            android:layout_height="48dp"
            android:layout_marginStart="98dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="98dp"
            android:text="@string/signUp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tw_confimaSenha"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/bt_voltar"
            android:layout_width="153dp"
            android:layout_height="50dp"
            android:layout_marginStart="129dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="129dp"
            android:layout_marginBottom="44dp"
            android:onClick="@{voltar::retornar}"
            android:text="@string/voltar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_singUp"
            app:layout_constraintVertical_bias="0.306" />

        <EditText
            android:id="@+id/tw_email"
            android:layout_width="280dp"
            android:layout_height="56dp"
            android:layout_marginStart="101dp"
            android:layout_marginEnd="101dp"
            android:ems="10"
            android:hint="@string/emailCadastro"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.322" />

        <EditText
            android:id="@+id/tw_senha"
            android:layout_width="279dp"
            android:layout_height="50dp"
            android:layout_marginStart="104dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="98dp"
            android:ems="10"
            android:hint="@string/senhaCadastro"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tw_email"
            app:layout_constraintVertical_bias="0.002" />

        <EditText
            android:id="@+id/tw_confimaSenha"
            android:layout_width="281dp"
            android:layout_height="58dp"
            android:layout_marginStart="104dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="98dp"
            android:ems="10"
            android:hint="@string/senhaconfirm"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.527"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tw_senha"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/iw_logo"
            android:layout_width="104dp"
            android:layout_height="97dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_app"
            app:layout_constraintBottom_toTopOf="@+id/tw_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.396" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>